--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ name = "rustertest"
 version = "0.0.1"
 authors = ["Daniel Goertzen <daniel.goertzen@gmail.com>"]
 
-#[lib]
-#crate-type = ["dylib"]
+[lib]
+name = "rustertest"
+crate-type = ["dylib"]
 
 
 [dependencies.ruster]
